--- a/static/index.html
+++ b/static/index.html
@@ -9,28 +9,51 @@
   <style>
     body { font-family: Arial, sans-serif; max-width: 1200px; margin: 20px auto; padding: 0 12px; background: #f9f9fb; }
     h1 { text-align: center; color: #333; }
+    .top-controls { display: flex; justify-content: center; align-items: center; gap: 20px; margin: 15px 0; flex-wrap: wrap; }
     .controls { margin: 20px 0; text-align: center; }
     .controls label { margin: 0 10px; font-weight: bold; }
-    select { padding: 6px; border-radius: 6px; border: 1px solid #ccc; }
+    select { padding: 6px 10px; border-radius: 6px; border: 1px solid #ccc; font-size: 14px; }
     #chart-container { position: relative; width: 100%; max-width: 1100px; height: 500px; margin: 30px auto; background: white; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1); overflow: hidden; }
     #chart { height: calc(100% - 50px); width: 100%; }
     #ruler { height: 50px; background: #222; position: relative; border-bottom-left-radius: 12px; border-bottom-right-radius: 12px; }
     .grade-line { position: absolute; width: 4px; height: 100%; top: 0; left: 0; background-color: #000; cursor: ew-resize; z-index: 10; border-radius: 2px; box-shadow: 0 0 10px rgba(0,0,0,0.3); }
-    .grade-label { position: absolute; bottom: 5px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.7); color: white; padding: 4px 8px; border-radius: 4px; font-size: 12px; white-space: nowrap; pointer-events: none; }
+    .grade-label { position: absolute; bottom: 5px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.8); color: white; padding: 4px 8px; border-radius: 4px; font-size: 12px; white-space: nowrap; pointer-events: none; }
     .ruler-tick { position: absolute; bottom: 8px; font-size: 11px; color: #aaa; transform: translateX(-50%); }
     #grades-table { width: 100%; border-collapse: collapse; margin-top: 20px; }
     #grades-table th, #grades-table td { padding: 10px; text-align: center; border: 1px solid #ddd; }
     #grades-table th { background: #f2f2f2; }
-    #grades-table .button-cell { text-align: left; }
-    button { padding: 5px 10px; margin: 0 5px; cursor: pointer; }
-    button:disabled { background: #ccc; cursor: not-allowed; }
+    #grades-table .button-cell { text-align: left; padding-left: 20px; }
+    button { padding: 8px 16px; margin: 0 5px; cursor: pointer; border: none; border-radius: 6px; background: #2196F3; color: white; font-weight: bold; }
+    button:hover { background: #1976D2; }
+    button:disabled { background: #aaa; cursor: not-allowed; }
     .tooltip { position: relative; display: inline-block; }
-    .tooltip .tooltiptext { visibility: hidden; width: 200px; background-color: black; color: #fff; text-align: center; border-radius: 6px; padding: 5px 0; position: absolute; z-index: 1; bottom: 125%; left: 50%; margin-left: -100px; opacity: 0; transition: opacity 0.3s; }
+    .tooltip .tooltiptext { visibility: hidden; width: 220px; background-color: #333; color: #fff; text-align: center; border-radius: 6px; padding: 8px; position: absolute; z-index: 100; bottom: 130%; left: 50%; margin-left: -110px; opacity: 0; transition: opacity 0.3s; font-size: 13px; }
     .tooltip:hover .tooltiptext { visibility: visible; opacity: 1; }
   </style>
 </head>
 <body>
-  <button id="saveBtn" style="margin: 10px auto; display: block;">Сохранить позиции</button>
+  <div class="top-controls">
+    <button id="saveBtn">Сохранить позиции грейдов</button>
+
+    <label class="tooltip">
+      Ориентация по рынку:
+      <select id="percentileSelect">
+        <option value="5">5-й</option>
+        <option value="10">10-й</option>
+        <option value="20">20-й</option>
+        <option value="30">30-й</option>
+        <option value="40">40-й</option>
+        <option value="50" selected>50-й (медиана)</option>
+        <option value="60">60-й</option>
+        <option value="70">70-й</option>
+        <option value="80">80-й</option>
+        <option value="90">90-й</option>
+        <option value="95">95-й</option>
+      </select>
+      <span class="tooltiptext" id="percentileTooltip">доступно только при 1 субгрейде и 50-м перцентиле</span>
+    </label>
+  </div>
+
   <h1>Зарплатный анализ по грейдам</h1>
   <p style="text-align:center;color:#555;">Перетаскивайте цветные линии, чтобы задать границы грейдов</p>
 
@@ -59,7 +82,7 @@
     let allData = [];
     let chartInstance = null;
     let subLevel = 1;
-    let marketPercentile = 50; // Default
+    let marketPercentile = 50;
 
     const subPercentiles = {
       1: [50],
@@ -69,7 +92,6 @@
       5: [10, 30, 50, 70, 90]
     };
 
-    // Грейды
     const grades = [
       { name: "Intern", color: "#FF9800", value: 60 },
       { name: "Junior", color: "#4CAF50", value: 140 },
@@ -78,6 +100,63 @@
       { name: "Lead", color: "#F44336", value: 800 },
       { name: "End", color: "#000000", value: 900 }
     ];
+
+    // === Кнопка "Сохранить" создаётся только один раз ===
+    const saveBtn = document.getElementById('saveBtn');
+    saveBtn.addEventListener('click', async () => {
+      const vacancy = document.getElementById('vacancyFilter').value;
+      if (!vacancy) return alert('Выберите вакансию');
+
+      const positions = {};
+      grades.forEach(g => {
+        positions[g.name.toLowerCase()] = g.value;
+      });
+
+      try {
+        const res = await fetch('/api/save_positions', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ vacancy_category: vacancy, positions })
+        });
+
+        if (res.ok || res.status === 204) {
+          alert('Позиции успешно сохранены в базу!');
+        } else {
+          const text = await res.text();
+          alert('Ошибка сохранения: ' + text);
+        }
+      } catch (e) {
+        alert('Сетевая ошибка: ' + e.message);
+      }
+    });
+
+    // === Dropdown перцентиля + логика блокировки ===
+    const percentileSelect = document.getElementById('percentileSelect');
+    const addSubgradeButtons = () => document.querySelectorAll('button:contains("+")'));
+
+    function updatePercentileState() {
+      const isSingleSub = subLevel === 1;
+      const isMedian = marketPercentile === 50;
+
+      percentileSelect.disabled = !isSingleSub;
+      document.getElementById('percentileTooltip').textContent = 
+        isSingleSub 
+          ? (isMedian ? "" : "доступно только при выставлении ориентации по рынку на 50") 
+          : "доступно только при 1 субгрейде";
+
+      // Блокировка кнопки "+ добавить субгрейд" если не 50-й
+      document.querySelectorAll('button').forEach(btn => {
+        if (btn.textContent.includes('+ добавить субгрейд')) {
+          btn.disabled = !isMedian;
+        }
+      });
+    }
+
+    percentileSelect.addEventListener('change', () => {
+      marketPercentile = parseInt(percentileSelect.value);
+      updatePercentileState();
+      calculateMedians();
+    });
 
     function getQuarter(dateStr) {
       const d = new Date(dateStr);
@@ -457,31 +536,8 @@
       });
     }
 
-    // Добавь кнопку "Сохранить"
-    document.body.insertAdjacentHTML('afterbegin', '<button id="saveBtn" style="margin: 10px auto; display: block;">Сохранить позиции</button>');
 
-    document.getElementById('saveBtn').addEventListener('click', async () => {
-      const vacancy = document.getElementById('vacancyFilter').value;
-      const positions = {};
-      grades.forEach(g => {
-        positions[g.name.toLowerCase()] = g.value;
-      });
-      try {
-        const res = await fetch('/api/save_positions', {
-          method: 'POST',
-          headers: {'Content-Type': 'application/json'},
-          body: JSON.stringify({ vacancy_category: vacancy, positions })
-        });
-        const result = await res.json();
-        if (result.success) {
-          alert('Позиции сохранены!');
-        } else {
-          alert('Ошибка сохранения: ' + result.detail);
-        }
-      } catch (e) {
-        alert('Ошибка: ' + e);
-      }
-    });
+    
 
     // При загрузке данных - загрузка позиций из allData
     async function loadData() {
@@ -526,13 +582,18 @@
       calculateMedians();
     });
 
-    window.addEventListener('DOMContentLoaded', () => {
+window.addEventListener('DOMContentLoaded', () => {
+      // Навешиваем обработчики
       ['vacancyFilter','cityFilter','quarterFilter','stepFilter'].forEach(id => {
         document.getElementById(id).addEventListener('change', () => {
           renderChart();
           calculateMedians();
         });
       });
+
+      // Инициализация состояния перцентиля
+      updatePercentileState();
+
       loadData();
     });
   </script>
